[package]
authors = ["Marius Cobzarenco <marius@reinfer.io>"]
name = "terrain"
version = "0.1.0"

[dependencies]
chan = "0.1.18"
env_logger = "0.3.5"
error-chain = "0.5.0"
glium = "0.15.0"
itertools = "0.4.19"
log = "0.3.6"
lru_time_cache = "0.5.0"
noise = "0.2.0"
num = "0.1.35"
rand = "0.3.14"
rayon = "0.4.2"
threadpool = "1.3.2"
wavefront_obj = "4.0.2"
